# nakamotoinstitute.org

./: .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  Procfile  README.md  addresses.json  authors.json  blogposts.json  config.py  config.py.env  createdb.py  crowdin.yml  dataimport.py  episodes.json  everyones-a-scammer-fi.md  fetch_prices.py  genfeed.py  importaddresses.py  literature.json  quotecategories.json  quotes.json  requirements.txt  research.json  run.py  satoshiposts.json  setup.cfg  skeptics.json  sni.py  tests.py
server/: .flaskenv  alembic.ini  app.py  cli.py  config.py  docker-compose.local.yml  docker-compose.production.yml  justfile  pyproject.toml  run.py
server/.envs/.local/: .fastapi  .flask  .postgres
server/app/: __init__.py
server/app/authors/: routes.py
server/app/cli/: __init__.py
server/app/mempool/: schemas.py
server/app/podcast/: routes.py
server/app/skeptics/: __init__.py  schemas.py
server/content/authors/: adam-back.md  adi-shamir.md  alban-gabillon.md  allen-farrington.md  amir-taaki.md  andrew-miller.md  andrew-poelstra.md  avi-wigderson.md  ben-laurie.md  bill-frantz.md  chip-morningstar.md  chuck-hammill.md  conrad-burchert.md  cynthia-dwork.md  daniel-krawisz.md  dave-bayer.md  david-a-harding.md  david-d-friedman.md  douglas-barnes.md  eric-hughes.md  fred-b-schneider.md  friedrich-a-hayek.md  gigi.md  gwern-branwen.md  henri-massias.md  jean-jacques-quisquater.md  jesus-huerta-de-soto.md  jimmy-song.md  john-perry-barlow.md  john-r-douceur.md  jorg-guido-hulsmann.md  joseph-j-laviola-jr.md  joseph-t-salerno.md  kaouther-blibech.md  ken-thompson.md  leslie-lamport.md  ludwig-von-mises.md  mark-s-miller.md  martin-e-hellman.md  michael-goldstein.md  (+26 more)
server/content/mempool/: against-the-minimum-majority-measure.en.md  appcoins-are-snake-oil.en.md  babysitting-bitcoin-skeptics.en.md  bitcoin-as-a-store-of-value-unit-of-account-and-medium-of-exchange.en.md  bitcoin-cannot-be-banned.en.md  bitcoin-cant-be-copied.en.md  bitcoin-does-not-waste-energy.en.md  bitcoin-equals-freedom.en.md  bitcoin-equals-freedom.pt-br.md  bitcoin-equals-freedom.ru.md  bitcoin-equals-freedom.tr.md  bitcoin-equals-freedom.vi.md  bitcoin-fixes-this.en.md  bitcoin-governance.en.md  bitcoin-governance.pt-br.md  bitcoin-has-no-image-problem.en.md  bitcoin-is-a-rally-cry.en.md  (+109 more)
server/data/: email_threads.json  emails.json  forum_threads.json  quote_categories.json  quotes.json  skeptics.json
server/migrations/: env.py
server/requirements/: base.txt  dev.in  dev.txt  prod.txt
server/scripts/: wait_for_postgres.py
server/sni/: __init__.py  app.py  config.py  constants.py  database.py  extensions.py  main.py  middleware.py  models.py
server/tests/: conftest.py  test_search.py
(+1626 files in other folders)
