[project]
name = "sni"
version = "0.1.0"
description = "Advancing and preserving bitcoin knowledge"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum==1.10.0",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.91",
    "fastapi[standard]==0.136.0",
    "feedgen==1.0.0",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "psycopg[binary,pool]==3.3.3",
    "pydantic-settings==2.14.0",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "SQLAlchemy[asyncio]==2.0.49",
    "typer==0.24.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "ruff==0.15.11",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-PyYaml==6.0.12.20260408",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
lint.select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/router.py" = ["B008"]
"**/routers.py" = ["B008"]
