[project]
name = "sni"
version = "0.1.0"
description = "Advancing and preserving bitcoin knowledge"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum==1.10.0",
    "beautifulsoup4==4.15.0",
    "boto3==1.43.31",
    "fastapi[standard]==0.137.1",
    "feedgen==1.0.0",
    "markdown-it-py==4.2.0",
    "mdit-py-plugins==0.6.1",
    "psycopg[binary,pool]==3.3.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "SQLAlchemy[asyncio]==2.0.51",
    "typer==0.26.7",
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-PyYaml==6.0.12.20260518",
]

[tool.uv]
package = false

[tool.ruff]
lint.select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/router.py" = ["B008"]
"**/routers.py" = ["B008"]
